--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Panel.cs" />
+     <Compile Include="Assets\Teach\Panel.cs" />
+     <Compile Include="Assets\Teach\PanelPresenter.cs" />
+     <Compile Include="Assets\Teach\PanelViewController.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
